stratosource/stratosource/sfdiff/testfiles/rtest/unpackaged/objects/APPR_DGRP__Dynamic_Group__c.object
<CustomObject>
    <description>Create a dynamic public group, a rules based approach to manage Salesforce public groups</description>
    <fields>
        <fullName>APPR_DGRP__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags if this group has been activated for use.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPR_DGRP__Apply_To_Portal__c</fullName>
        <inlineHelpText>Select the type of users to include in this dynamic group</inlineHelpText>
        <label>Apply To Portal</label>
        <picklist>
            <picklistValues>
                <fullName>Partner Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APPR_DGRP__Description__c</fullName>
        <description>Optional group description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APPR_DGRP__Group_Id__c</fullName>
        <description>Stores the group id assigned to this dynamic group definition</description>
        <label>Group Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APPR_DGRP__Group_Name__c</fullName>
        <description>Automatically populated with the referenced public group name once the dynamic group is activated</description>
        <label>Group Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APPR_DGRP__Group__c</fullName>
        <description>Uses the group name and the group id fields (which are populated automatically) to create a link to the public group definition</description>
        <formula>HYPERLINK(&apos;/setup/own/groupdetail.jsp?id=&apos; &amp;  APPR_DGRP__Group_Id__c  &amp; &apos;&amp;setupid=PublicGroups&apos;, APPR_DGRP__Group_Name__c, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Public Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPR_DGRP__ObjectName__c</fullName>
        <description>List of objects that the application currently supports</description>
        <label>Object Name</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APPR_DGRP__Role_Level__c</fullName>
        <inlineHelpText>The level(s) of the hierarchy to add to this dynamic group</inlineHelpText>
        <label>Role Level</label>
        <picklist>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APPR_DGRP__Role_Type__c</fullName>
        <inlineHelpText>The sharing type to create for the selected role level</inlineHelpText>
        <label>Role Type</label>
        <picklist>
            <picklistValues>
                <fullName>Portal Role And Subordinates</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Portal Role</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APPR_DGRP__group_members__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Captures how many members were added to the group when the group was last updated.</description>
        <label># Group Members</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dynamic Group</label>
    <listViews>
        <fullName>APPR_DGRP__Active_Groups</fullName>
        <columns>NAME</columns>
        <columns>APPR_DGRP__Description__c</columns>
        <columns>APPR_DGRP__Group_Name__c</columns>
        <columns>APPR_DGRP__group_members__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>APPR_DGRP__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APPR_DGRP__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Groups</label>
    </listViews>
    <listViews>
        <fullName>APPR_DGRP__All</fullName>
        <columns>NAME</columns>
        <columns>APPR_DGRP__Description__c</columns>
        <columns>APPR_DGRP__Group_Name__c</columns>
        <columns>APPR_DGRP__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>APPR_DGRP__Inactive_Groups</fullName>
        <columns>NAME</columns>
        <columns>APPR_DGRP__Description__c</columns>
        <columns>APPR_DGRP__Group_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>APPR_DGRP__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APPR_DGRP__Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Groups</label>
    </listViews>
    <listViews>
        <fullName>APPR_DGRP__My_Groups</fullName>
        <columns>NAME</columns>
        <columns>APPR_DGRP__Description__c</columns>
        <columns>APPR_DGRP__Group_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>APPR_DGRP__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Groups</label>
    </listViews>
    <nameField>
        <label>Dynamic Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Groups</pluralLabel>
    <recordTypes>
        <fullName>APPR_DGRP__Active</fullName>
        <active>true</active>
        <description>Used to create active dynamic groups. This record type should only be activated by code.</description>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>APPR_DGRP__Inactive</fullName>
        <active>true</active>
        <description>Default record type to create new groups</description>
        <label>Inactive</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>APPR_DGRP__ObjectName_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( TEXT(APPR_DGRP__ObjectName__c ))</errorConditionFormula>
        <errorMessage>Object Name is required. Should be equal to &quot;Account&quot;.</errorMessage>
    </validationRules>
</CustomObject>